# lingmo-builder

./: Cargo.toml  README.md
.github/workflows/: build-livebuild.yml  build-lmforge.yml
builder/: .getopt.sh  build.sh
builder/auto/: config
builder/lingmo-config/common/archives/: lingmo.key.chroot  lingmo.list.binary
builder/lingmo-config/common/bootloaders/grub-pc/: grub.cfg
builder/lingmo-config/common/hooks/live/: lingmo-hacks.chroot
builder/lingmo-config/common/includes.binary/: README  Version
builder/lingmo-config/common/includes.chroot_after_packages/etc/: sddm.conf
builder/lingmo-config/common/includes.chroot_after_packages/etc/live/config.conf.d/: user-setup.conf
builder/lingmo-config/common/includes.chroot_after_packages/etc/system/: currentVersion
builder/lingmo-config/common/includes.chroot_after_packages/usr/lib/live/config/: 1166-fix-sddm-auto-login
builder/lingmo-config/common/package-lists/: lingmo_default_chroot.list.chroot  lingmo_extra_list_bookworm.list.chroot  standard.list.chroot
builder/lingmo-config/variant-everything/package-lists/: lingmo.list.chroot  lingmo_everything.list.chroot
config/: example.toml
crates/cli/: Cargo.toml
crates/cli/src/: app.rs  main.rs
crates/cli/src/commands/: build.rs  clean.rs  init.rs  list_plugins.rs  mod.rs  validate.rs
crates/config-parser/: Cargo.toml
crates/config-parser/src/: lib.rs  model.rs  validate.rs
crates/core-engine/: Cargo.toml
crates/core-engine/src/: error.rs  lib.rs  logging.rs  types.rs
crates/iso-builder/: Cargo.toml
crates/iso-builder/src/: lib.rs
crates/pipeline/: Cargo.toml
crates/pipeline/src/: lib.rs  pipeline.rs  stage.rs  stage_executor.rs
crates/plugins/: Cargo.toml
crates/plugins/src/: lib.rs  registry.rs  trait_def.rs
crates/plugins/src/builtins/: core.rs  gnome.rs  kde.rs  minimal.rs  mod.rs  networkmanager.rs  nvidia.rs  xfce.rs
crates/repository-manager/: Cargo.toml
crates/repository-manager/src/: deb822.rs  keyring.rs  lib.rs
crates/volume-manager/: Cargo.toml
crates/volume-manager/src/: builder.rs  catalog.rs  lib.rs  manifest.rs  mounter.rs  splitter.rs  strategy.rs
scripts/: chroot-mount.sh  debootstrap.sh  grub-install.sh
tools/: build_version.sh
