[workspace]
resolver = "2"
members = [
    "crates/core-engine",
    "crates/pipeline",
    "crates/plugins",
    "crates/config-parser",
    "crates/iso-builder",
    "crates/volume-manager",
    "crates/repository-manager",
    "crates/cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
repository = "https://github.com/lingmo/lingmo-builder"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive", "env"] }
sha2 = "0.10"
regex = "1"
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
