[package]
name = "lingmo-builder"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "lingmo-builder"
path = "src/main.rs"

[dependencies]
lingmo-core-engine = { path = "../core-engine" }
lingmo-pipeline = { path = "../pipeline" }
lingmo-plugins = { path = "../plugins" }
lingmo-config-parser = { path = "../config-parser" }
lingmo-iso-builder = { path = "../iso-builder" }
lingmo-volume-manager = { path = "../volume-manager" }
clap.workspace = true
tracing.workspace = true
anyhow.workspace = true
serde.workspace = true
