[package]
name = "lingmo-volume-manager"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
lingmo-core-engine = { path = "../core-engine" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tracing.workspace = true
walkdir = "2"
chrono.workspace = true
